--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dev_dependencies:
   font_awesome_flutter: ^8.0.1
   modal_progress_hud: ^0.1.3
   flutter_colorpicker: ^0.3.4
+  flutter_slidable: ^0.4.9
 
 
 # For information on the generic Dart part of this file, see the
