--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dev_dependencies:
   modal_progress_hud: ^0.1.3
   flutter_colorpicker: ^0.3.4
   flutter_slidable: ^0.4.9
+  provider: ^4.3.2+2
 
 
 # For information on the generic Dart part of this file, see the
