--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,11 +35,15 @@ dev_dependencies:
 
   path: ^1.7.0
   sqflite: ^1.3.1+1
+  provider: ^4.3.2+2
+
   font_awesome_flutter: ^8.0.1
   modal_progress_hud: ^0.1.3
   flutter_colorpicker: ^0.3.4
+
   flutter_slidable: ^0.5.7
-  provider: ^4.3.2+2
+  flutter_staggered_animations: ^0.1.2
+  animated_text_kit: ^2.3.0
 
 
 # For information on the generic Dart part of this file, see the
